# telnetd

./: CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt  main.c  telnet.c  telnet.h
